Adds unit tests for declaration validation.
Improves the validation of the new declaration schema
and adds several unit tests.

Refs #113677